avoid horizontal scrolling

--- a/src/components/_checkboxAndRadio.scss
+++ b/src/components/_checkboxAndRadio.scss
@@ -2,20 +2,16 @@
 .uicc-checkbox {
   display: block;
 
-  & + & {
-    margin-top: .5em;
-  }
+  margin-top: .5em;
 
   &--inline {
     display: inline-block;
-    margin-right: var(--uicc-default-margin);
-
-    margin-top: .5em;
+    margin-right: $uicc-default-margin;
   }
 
 
   &__label {
-    @include uicc-hover(var(--uicc-color-brand-primary));
+    @include uicc-hover($uicc-color-brand-primary);
 
     display: inline-block;
     position: relative;
@@ -35,7 +31,7 @@
       height: 1.5em;
       border: 1px solid transparentize($uicc-color-gray-dark, 0.5);
       padding: .2em;
-      color: var(--uicc-color-white);
+      color: $uicc-color-white;
       line-height: .4em;
       text-indent: -.1em;
     }
@@ -57,14 +53,14 @@
 
   &.is-checked &__label,
   &__control:checked + &__label {
-    color: var(--uicc-color-brand-primary);
+    color: $uicc-color-brand-primary;
   }
 
   &.is-checked &__label::before,
   &__control:checked + &__label::before {
     background-image: url('#{$uicc-image-path}/check.svg');
-    background-color: var(--uicc-color-brand-primary);
-    color: var(--uicc-color-brand-primary-inverted);
+    background-color: $uicc-color-brand-primary;
+    color: $uicc-color-brand-primary-inverted;
     background-size: 1em;
     background-repeat: no-repeat;
     background-position: center center;
@@ -86,7 +82,7 @@
 
   &--big {
 
-    margin-right: var(--uicc-default-margin-big);
+    margin-right: $uicc-default-margin-big;
 
     & + & {
       margin-top: 1em;
@@ -102,11 +98,21 @@
   }
 
   &--small &--inline {
-    margin-right: var(--uicc-default-margin-small);
+    margin-right: $uicc-default-margin-small;
   }
 
   &--small &__label {
     font-size: 0.8em;
+  }
+
+
+  &.is-disabled &__label {
+    color: $uicc-color-gray-medium !important;
+    cursor: not-allowed;
+
+    &::before {
+      opacity: 0.7;
+    }
   }
 
 }
