--- a/src/styledown.scss
+++ b/src/styledown.scss
@@ -7,7 +7,7 @@
 }
 
 .sg-container {
-  padding: 0 0.5rem;
+  padding: 0 0.75rem;
 }
 
 .sg-block {
